[package]
name = "pallas"
version = "0.1.1"
edition = "2021"

[lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
cognitive_complexity = "allow"

[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"

[dependencies]
hemtt-pbo = { git = "https://github.com/brettmayson/hemtt" }
hemtt-signing = { git = "https://github.com/brettmayson/hemtt" }

dashmap = "6.1.0"
indicatif = "0.17.9"
rayon = "1.10.0"
savefile = "0.18.5"
savefile-derive = "0.18.5"
